--- a/Loan Calculator/Differentiate payment/task-info.yaml
+++ b/Loan Calculator/Differentiate payment/task-info.yaml
@@ -257,5 +257,8 @@ files:
         LoanCalcTest('creditcalc.creditcalc').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/90/stages/503/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Sun, 10 Jan 2021 20:28:46 UTC
 record: -1
