--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/279920/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Sun, 10 Jan 2021 11:05:17 UTC
+update_date: Sun, 10 Jan 2021 19:53:03 UTC
 stages:
 - id: 500
   step: 8002
@@ -16,7 +16,7 @@ stages:
   is_completed: true
 - id: 503
   step: 8005
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Introduction to Python
