--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -27,3 +27,7 @@ content:
 - English contractions
 - Types
 - Simple program
+- Game over
+- Count up the squares
+- Vowels and consonants
+- Prime number
