Additional problems completed

--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -31,3 +31,9 @@ content:
 - Count up the squares
 - Vowels and consonants
 - Prime number
+- Cat cafés
+- Palindrome
+- Party time
+- Process integer input
+- Small scale
+- The mean
