--- a/Problems/Process integer input/task-info.yaml
+++ b/Problems/Process integer input/task-info.yaml
@@ -2,10 +2,11 @@ type: code
 files:
 - name: main.py
   visible: true
+  text: '# put your python code here'
   learner_created: false
-feedback_link: https://hyperskill.org/learn/step/5931#comment
+feedback_link: https://hyperskill.org/learn/step/6307#comment
 status: Solved
 feedback:
   message: <html>Correct solution</html>
-  time: Fri, 15 Jan 2021 19:39:21 UTC
+  time: Fri, 15 Jan 2021 20:53:16 UTC
 record: -1
